separated form-group from c-form

--- a/src/login.html
+++ b/src/login.html
@@ -96,18 +96,18 @@
         <form class="c-form c-form--border-right@tablet
                      o-box o-box--tiny o-box--large@tablet">
 
-          <div class="c-form__group u-margin-top">
-            <input type="email" id="mail" class="c-form__field" 
+          <div class="c-form-group u-margin-top">
+            <input type="email" id="mail" class="c-form-group__input" 
               placeholder="Email" required></input>
-            <label for="mail" class="c-form__label">Email</label>
-            <span class="c-form__bar"></span>
+            <label for="mail" class="c-form-group__label">Email</label>
+            <span class="c-form-group__input-bar"></span>
           </div>
 
-          <div class="c-form__group">
-            <input type="password" id="password" class="c-form__field" 
+          <div class="c-form-group">
+            <input type="password" id="password" class="c-form-group__input" 
               placeholder="Passowrd" required>
-            <label for="password" class="c-form__label">Hasło</label>
-            <span class="c-form__bar"></span>
+            <label for="password" class="c-form-group__label">Hasło</label>
+            <span class="c-form-group__input-bar"></span>
           </div>
 
           <div class="u-text-banner">
