added login link to nav

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         </li>
 
         <li class="c-nav-primary__item">
-          <a href="#" class="c-nav-primary__link">Lorem ipsum</a>
+          <a href="/login.html" class="c-nav-primary__link">Logowanie</a>
         </li>
 
         <li class="c-nav-primary__item">
