--- a/src/login.html
+++ b/src/login.html
@@ -78,9 +78,14 @@
 
 </header>
 
+
+
+
+
+
 <div class="u-padding-bottom-huge"></div>
 
-<main>
+<main class="u-margin-bottom-huge">
   <div class="o-wrapper">
     <div class="o-layout o-layout--flush o-layout--middle">
 
@@ -124,7 +129,6 @@
             <h3 class="u-h2">Zaloguj się przez:</h3>
           </div>
           
-
           <button class="c-btn c-btn--full c-btn--social c-btn--facebook
                          u-margin-bottom">
             <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" class="c-btn__icon">
@@ -141,12 +145,158 @@
             </svg>
             Google
           </button>
+
         </div>
       </div>
 
     </div>
   </div>
 </main>
+
+
+
+
+
+
+<!-- FOOTER -->
+
+<footer class="c-footer">
+
+  <div class="o-wrapper">
+
+    <div class="o-layout">
+
+
+      <div class="o-layout__item u-1/1 u-1/4@tablet">
+
+        <ul class="o-list-bare">
+          <li>
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+              Lorem
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              ipsum
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              another link
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Lorem
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+      <div class="o-layout__item u-1/1 u-1/4@tablet">
+
+        <ul class="o-list-bare">
+          <li>
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+              Lorem
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              ipsum
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              another link
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Lorem
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+
+      <div class="o-layout__item u-1/1 u-1/4@tablet">
+
+        <ul class="o-list-bare">
+          <li>
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+              Najnowsze artykuły na blogu
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Lorem ipsum dolor sit.
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Lorem ipsum dolor sit amet.
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Lorem ipsum dolor.
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+
+      <div class="o-layout__item u-1/1 u-1/4@tablet">
+
+        <ul class="o-list-bare">
+          <li>
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+              Kontakt
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              contact@example.com
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Facebook
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Google+
+            </a>
+          </li>
+          <li>
+            <a class="c-footer__item u-link-hidden" href="#">
+              Twitter
+            </a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+
+    <div class="o-layout">
+      <div class="o-layout__item">
+        <hr class="c-footer__line">
+        <p class="c-footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda deserunt voluptates cumque pariatur enim ipsum unde dolor, illo eius saepe temporibus cum. Quibusdam, nesciunt nam repellat corporis excepturi aut molestias.</p>
+        <p class="c-footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda deserunt voluptates cumque pariatur enim ipsum unde dolor, illo eius saepe temporibus cum. Quibusdam, nesciunt nam repellat corporis excepturi aut molestias.</p>
+        <p class="u-text-banner c-footer__text">
+          Wszelkie prawa zastrzeżone. Super Awesome 2017
+        </p>
+      </div>
+    </div>
+
+  </div>
+</footer>
 
   
 </body>
