updated ui components

--- a/src/login.html
+++ b/src/login.html
@@ -171,22 +171,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Lorem
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               ipsum
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               another link
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem
             </a>
           </li>
@@ -198,22 +198,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Lorem
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               ipsum
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               another link
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem
             </a>
           </li>
@@ -226,22 +226,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Najnowsze artykuły na blogu
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem ipsum dolor sit.
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem ipsum dolor sit amet.
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem ipsum dolor.
             </a>
           </li>
@@ -254,27 +254,27 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Kontakt
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               contact@example.com
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Facebook
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Google+
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Twitter
             </a>
           </li>
