--- a/src/ui-components.html
+++ b/src/ui-components.html
@@ -86,44 +86,67 @@
 <div class="u-padding-bottom-huge"></div>
 
 <main class="o-wrapper">
-  <nav class="c-breadcrumb">
-    <a href="#" class="c-breadcrumb__item">Lorem ipsum</a>
-    <a href="#" class="c-breadcrumb__item">Lorem ipsum</a>
-    <span class="c-breadcrumb__item">Lorem ipsum</span>
-  </nav>
+  <h1>UI components</h1>
 
-  <select name="select" class="c-select">
-    <option value="value1" class="c-select__item">Value 1</option>
-    <option value="value1" class="c-select__item">Value 2</option>
-    <option value="value1" class="c-select__item">Value 3</option>
-    <option value="value1" class="c-select__item">Value 4</option>
-  </select>
+  <section class="u-margin-bottom-large">
+    <h2 class="u-h3 u-margin-bottom-small">Breadcrumb</h2>
+    <nav class="c-breadcrumb">
+      <a href="#" class="c-breadcrumb__item">Lorem ipsum</a>
+      <a href="#" class="c-breadcrumb__item">Lorem ipsum</a>
+      <span class="c-breadcrumb__item c-breadcrumb__item--active">Lorem ipsum</span>
+    </nav>
+  </section>
 
-  <nav class="u-text-centered">
-    <ul class="c-pagination o-list-bare">
-      <li class="c-pagination__item">
-        <a href="#" class="c-pagination__link" aria-label="First"><<</a>
-      </li>
-      <li class="c-pagination__item">
-        <a href="#" class="c-pagination__link" aria-label="Previous"><</a>
-      </li>
-      <li class="c-pagination__item">
-        <a href="#" class="c-pagination__link">1</a>
-      </li>
-      <li class="c-pagination__item c-pagination__item--active">
-        <a href="#" class="c-pagination__link">2</a>
-      </li>
-      <li class="c-pagination__item">
-        <a href="#" class="c-pagination__link">3</a>
-      </li>
-      <li class="c-pagination__item">
-        <a href="#" class="c-pagination__link" aria-label="Next">></a>
-      </li>
-      <li class="c-pagination__item">
-        <a href="#" class="c-pagination__link" aria-label="Last">>></a>
-      </li>
-    </ul>
-  </nav>
+
+  <section class="u-margin-bottom-large">
+    <h2 class="u-h3 u-margin-bottom-small">Select</h2>
+    <select name="select" class="c-select">
+      <option value="value1" class="c-select__item">Value 1</option>
+      <option value="value1" class="c-select__item">Value 2</option>
+      <option value="value1" class="c-select__item">Value 3</option>
+      <option value="value1" class="c-select__item">Value 4</option>
+    </select>
+  </section>
+
+
+  <section class="u-margin-bottom-large">
+    <h2 class="u-h3 u-margin-bottom-small">Field</h2>
+    <input type="text" class="c-field u-margin-bottom-small"
+      placeholder="Type something...">
+    <input type="text" class="c-field c-field--full"
+      placeholder="Type something...">
+  </section>
+
+  
+  <section class="u-margin-bottom-large">
+    <h2 class="u-h3 u-margin-bottom-small">Pagination</h2>
+    <nav class="u-text-centered">
+      <ul class="c-pagination o-list-bare">
+        <li class="c-pagination__item">
+          <a href="#" class="c-pagination__link" aria-label="First"><<</a>
+        </li>
+        <li class="c-pagination__item">
+          <a href="#" class="c-pagination__link" aria-label="Previous"><</a>
+        </li>
+        <li class="c-pagination__item">
+          <a href="#" class="c-pagination__link">1</a>
+        </li>
+        <li class="c-pagination__item c-pagination__item--active">
+          <a href="#" class="c-pagination__link">2</a>
+        </li>
+        <li class="c-pagination__item">
+          <a href="#" class="c-pagination__link">3</a>
+        </li>
+        <li class="c-pagination__item">
+          <a href="#" class="c-pagination__link" aria-label="Next">></a>
+        </li>
+        <li class="c-pagination__item">
+          <a href="#" class="c-pagination__link" aria-label="Last">>></a>
+        </li>
+      </ul>
+    </nav>
+  </section>
+  
 
 </main>
 
@@ -145,22 +168,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Lorem
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               ipsum
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               another link
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem
             </a>
           </li>
@@ -172,22 +195,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Lorem
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               ipsum
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               another link
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem
             </a>
           </li>
@@ -200,22 +223,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Najnowsze artykuły na blogu
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem ipsum dolor sit.
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem ipsum dolor sit amet.
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Lorem ipsum dolor.
             </a>
           </li>
@@ -228,27 +251,27 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
               Kontakt
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               contact@example.com
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Facebook
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Google+
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-hidden" href="#">
+            <a class="c-footer__item u-link-masked" href="#">
               Twitter
             </a>
           </li>
