--- a/src/login.html
+++ b/src/login.html
@@ -89,7 +89,7 @@
   <div class="o-wrapper">
     <div class="o-layout o-layout--flush o-layout--middle">
 
-      <div class="o-layout__item u-1/1 u-text-banner">
+      <div class="o-layout__item u-1/1 u-text-centered">
         <h1>Zaloguj się</h1>
         <h2>Nie masz konta? <a href="#">Zarejestruj się</a></h2>
       </div>
@@ -115,7 +115,7 @@
             <span class="c-form-group__input-bar"></span>
           </div>
 
-          <div class="u-text-banner">
+          <div class="u-text-centered">
             <input type="submit" value="Zaloguj" class="c-btn c-btn--secondary">
           </div>
           
@@ -125,7 +125,7 @@
 
       <div class="o-layout__item u-1/1 u-1/2@tablet u-padding-right u-padding-right-huge@tablet">
         <div class="o-box o-box--tiny o-box--large@tablet">
-          <div class="u-text-banner">
+          <div class="u-text-centered">
             <h3 class="u-h2">Zaloguj się przez:</h3>
           </div>
           
@@ -171,22 +171,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
               Lorem
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               ipsum
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               another link
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Lorem
             </a>
           </li>
@@ -198,22 +198,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
               Lorem
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               ipsum
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               another link
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Lorem
             </a>
           </li>
@@ -226,22 +226,22 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
               Najnowsze artykuły na blogu
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Lorem ipsum dolor sit.
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Lorem ipsum dolor sit amet.
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Lorem ipsum dolor.
             </a>
           </li>
@@ -254,27 +254,27 @@
 
         <ul class="o-list-bare">
           <li>
-            <a class="c-footer__item c-footer__item--prominent  u-link-masked" href="#">
+            <a class="c-footer__item c-footer__item--prominent  u-link-hidden" href="#">
               Kontakt
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               contact@example.com
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Facebook
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Google+
             </a>
           </li>
           <li>
-            <a class="c-footer__item u-link-masked" href="#">
+            <a class="c-footer__item u-link-hidden" href="#">
               Twitter
             </a>
           </li>
@@ -289,7 +289,7 @@
         <hr class="c-footer__line">
         <p class="c-footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda deserunt voluptates cumque pariatur enim ipsum unde dolor, illo eius saepe temporibus cum. Quibusdam, nesciunt nam repellat corporis excepturi aut molestias.</p>
         <p class="c-footer__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda deserunt voluptates cumque pariatur enim ipsum unde dolor, illo eius saepe temporibus cum. Quibusdam, nesciunt nam repellat corporis excepturi aut molestias.</p>
-        <p class="u-text-banner c-footer__text">
+        <p class="u-text-centered c-footer__text">
           Wszelkie prawa zastrzeżone. Super Awesome 2017
         </p>
       </div>
