updated header link

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         </li>
 
         <li class="c-nav-primary__item">
-          <a href="#" class="c-nav-primary__link">Lorem ipsum</a>
+          <a href="./ui-components.html" class="c-nav-primary__link">UI components</a>
         </li>
 
         <li class="c-nav-primary__item">
