--- a/src/login.html
+++ b/src/login.html
@@ -37,7 +37,7 @@
         </li>
 
         <li class="c-nav-primary__item">
-          <a href="#" class="c-nav-primary__link">Lorem ipsum</a>
+          <a href="./ui-components.html" class="c-nav-primary__link">UI components</a>
         </li>
 
         <li class="c-nav-primary__item">
@@ -99,7 +99,7 @@
                   u-margin-bottom-large u-margin-bottom-none@tablet">
 
         <form class="c-form c-form--border-right@tablet
-                     o-box o-box--tiny o-box--large@tablet">
+                     o-box">
 
           <div class="c-form-group u-margin-top">
             <input type="email" id="mail" class="c-form-group__input" 
@@ -124,7 +124,7 @@
       </div>
 
       <div class="o-layout__item u-1/1 u-1/2@tablet u-padding-right u-padding-right-huge@tablet">
-        <div class="o-box o-box--tiny o-box--large@tablet">
+        <div class="o-box">
           <div class="u-text-centered">
             <h3 class="u-h2">Zaloguj się przez:</h3>
           </div>
