--- a/src/ui-components.html
+++ b/src/ui-components.html
@@ -35,9 +35,9 @@
         <li class="c-nav-primary__item">
           <a href="#" class="c-nav-primary__link c-nav-primary__link--active">Lorem ipsum</a>
         </li>
-
+        
         <li class="c-nav-primary__item">
-          <a href="#" class="c-nav-primary__link">Lorem ipsum</a>
+          <a href="./ui-components.html" class="c-nav-primary__link">UI components</a>
         </li>
 
         <li class="c-nav-primary__item">
