updated article rwd

--- a/src/article.html
+++ b/src/article.html
@@ -125,7 +125,7 @@
       src="https://placeholdit.imgix.net/~text?txtsize=33&txt=HEAD IMAGE&w=800&h=500" alt="">
 
     <div class="o-layout o-layout--center">
-      <div class="o-layout__item u-1/1 u-4/5@tablet u-3/5@desktop">
+      <div class="o-layout__item u-1/1 u-3/5@desktop">
         <div class="c-article__body">
           <h2>Lorem ipsum dolor sit amet, consectetur.</h2>
           <p>Lorem ipsum dolor <a href="#">sit amet</a>, consectetur adipisicing elit. Dignissimos illum recusandae accusamus amet suscipit saepe modi quo voluptas id laborum voluptatem, a ipsum, quam perferendis hic ipsam dolor quis adipisci?</p>
