added card component

--- a/src/ui-components.html
+++ b/src/ui-components.html
@@ -98,6 +98,28 @@
   </section>
 
   <section class="u-margin-bottom-large">
+    <h2 class="u-h3 u-margin-bottom-small">Card</h2>
+    <a href="#">
+      <div class="o-block o-block--tiny o-block--left
+                  c-card c-card--center">
+        <div class="o-block__img o-ratio o-ratio--6:5">
+          <div class="o-ratio__content c-card__img"
+            style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=66&txt=700%C3%97500&w=700&h=500')">
+          </div> 
+        </div>
+        <div class="o-block__body o-box o-box--small c-card__body">
+          <h4 class="c-card__title">
+            Lorem ipsum dolor sit.
+          </h4>
+          <div class="c-card__footer">
+            <date>20 kwietnia 2017</date>
+          </div>
+        </div>
+      </div>
+    </a>
+  </section>
+
+  <section class="u-margin-bottom-large">
     <h2 class="u-h3 u-margin-bottom-small">Card-wide</h2>
     <article class="o-flag o-flag--flush c-card-wide
                     u-margin-bottom">
