--- a/src/article.html
+++ b/src/article.html
@@ -147,7 +147,7 @@
 
 
     <!-- ARTICLE FOOTER -->
-    <div class="o-layout o-layout--center">
+    <div class="o-layout o-layout--center u-margin-bottom u-margin-bottom-large@tablet">
       <div class="o-layout__item  u-1/1 u-3/5@desktop">
         <hr class="c-article__line">
         <footer class="o-pack o-pack--space-between o-pack--middle">
@@ -162,7 +162,7 @@
           </div>         
 
           <div class="o-pack__item">
-            <a href="#">
+            <a href="#" class="u-margin-right-tiny">
               <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" 
                 class="c-icon c-icon--facebook  c-article__regular-icon c-article__social-icon">
                 <rect fill="currentColor" height="512" rx="15%" width="512"/>
@@ -186,6 +186,79 @@
 
 
   </article>
+
+  <section class="c-panel c-panel--noborder c-panel--bg-muted u-padding-vertical-large">
+    <div class="o-wrapper">
+      <div class="o-layout o-layout--center">
+
+        <div class="o-layout__item u-1/1 u-1/3@tablet u-margin-bottom">
+          <a href="#">
+            <div class="o-block o-block--tiny o-block--left
+                        c-card c-card--center">
+              <div class="o-block__img o-ratio o-ratio--6:5">
+                <div class="o-ratio__content c-card__img"
+                  style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=66&txt=700%C3%97500&w=700&h=500')">
+                </div> 
+              </div>
+              <div class="o-block__body o-box o-box--small c-card__body">
+                <h4 class="c-card__title">
+                  Lorem ipsum dolor sit.
+                </h4>
+                <div class="c-card__footer">
+                  <date>20 kwietnia 2017</date>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="o-layout__item u-1/1 u-1/3@tablet u-margin-bottom">
+          <a href="#">
+            <div class="o-block o-block--tiny o-block--left
+                        c-card c-card--center">
+              <div class="o-block__img o-ratio o-ratio--6:5">
+                <div class="o-ratio__content c-card__img"
+                  style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=66&txt=700%C3%97500&w=700&h=500')">
+                </div> 
+              </div>
+              <div class="o-block__body o-box o-box--small c-card__body">
+                <h4 class="c-card__title">
+                  Lorem ipsum dolor sit.
+                </h4>
+                <div class="c-card__footer">
+                  <date>20 kwietnia 2017</date>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+
+        <div class="o-layout__item u-1/1 u-1/3@tablet u-margin-bottom">
+          <a href="#">
+            <div class="o-block o-block--tiny o-block--left
+                        c-card c-card--center">
+              <div class="o-block__img o-ratio o-ratio--6:5">
+                <div class="o-ratio__content c-card__img"
+                  style="background-image: url('https://placeholdit.imgix.net/~text?txtsize=66&txt=700%C3%97500&w=700&h=500')">
+                </div> 
+              </div>
+              <div class="o-block__body o-box o-box--small c-card__body">
+                <h4 class="c-card__title">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </h4>
+                <div class="c-card__footer">
+                  <date>20 kwietnia 2017</date>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
 </main>
 
 
