--- a/src/article.html
+++ b/src/article.html
@@ -204,7 +204,7 @@
                 <h4 class="c-card__title">
                   Lorem ipsum dolor sit.
                 </h4>
-                <div class="c-card__footer">
+                <div>
                   <date>20 kwietnia 2017</date>
                 </div>
               </div>
@@ -225,7 +225,7 @@
                 <h4 class="c-card__title">
                   Lorem ipsum dolor sit.
                 </h4>
-                <div class="c-card__footer">
+                <div>
                   <date>20 kwietnia 2017</date>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                 <h4 class="c-card__title">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 </h4>
-                <div class="c-card__footer">
+                <div>
                   <date>20 kwietnia 2017</date>
                 </div>
               </div>
